# chemloop

./: .gitignore  README.md  pyproject.toml
notebooks/: chemloop_demo.ipynb
src/chemloop/: __init__.py
src/chemloop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/chemloop/analysis/: clas.py  filter.py
src/chemloop/core/: chemical_loops.py  net_reactions.py  networks.py  redox_materials.py
src/chemloop/utils/: mp_entries.py
tests/: test_clas.py  test_filter.py  test_net_reactions.py  test_redox_materials.py
tests/test_files/: results_tot_773K.csv  results_tot_NaOH_773K.csv
